[gd_scene load_steps=14 format=2]

[ext_resource path="res://Nodes/Objects/Hole/Hole.gd" type="Script" id=1]
[ext_resource path="res://Nodes/Objects/Hole/Hole_anim.png" type="Texture2D" id=2]
[ext_resource path="res://Nodes/Enemies/MegaSwarm/FastSpiderSwarm_lvl1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Nodes/Objects/Hole/Hole_mask_small.png" type="Texture2D" id=4]
[ext_resource path="res://SFX/Environmnent/rock_earthquake_impact_01.wav" type="AudioStream" id=5]
[ext_resource path="res://Nodes/Map/ZIndexer.tscn" type="PackedScene" id=6]
[ext_resource path="res://Nodes/Objects/Hole/Cracks.png" type="Texture2D" id=7]

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Hole:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hole:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hole:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Cracks:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
resource_name = "destroy_terrain"
length = 2.0
step = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.4, 0.80395, 1, 1.2, 1.4, 1.6, 1.8 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "destroy_terrain"
}, {
"args": [  ],
"method": "destroy_terrain"
}, {
"args": [  ],
"method": "destroy_terrain"
}, {
"args": [  ],
"method": "destroy_terrain"
}, {
"args": [  ],
"method": "destroy_terrain"
}, {
"args": [  ],
"method": "destroy_terrain"
}, {
"args": [  ],
"method": "destroy_terrain"
}, {
"args": [  ],
"method": "destroy_terrain"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hole:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0.8, 1.2, 1.6, 2 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.125, 0.125 ), Vector2( 0.15, 0.15 ), Vector2( 0.2, 0.2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hole:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0.8, 1.2, 1.6, 2 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hole:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0.8, 1.2 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PackedFloat32Array( 0.8, 1.2, 1.6, 2 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "spawn_debris"
}, {
"args": [  ],
"method": "spawn_debris"
}, {
"args": [  ],
"method": "spawn_debris"
}, {
"args": [  ],
"method": "spawn_debris"
} ]
}

[sub_resource type="Animation" id=10]
resource_name = "fade"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 1 ),
"transitions": PackedFloat32Array( 1 ),
"values": [ {
"args": [  ],
"method": "fade"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hole:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 1 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "grow"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Hole:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.7, 1.4, 2 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.125, 0.125 ), Vector2( 0.15, 0.15 ), Vector2( 0.2, 0.2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hole:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.7, 1.4, 2 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hole:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0, 0.7 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0, 0.6, 1.3, 1.9 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "spawn_debris"
}, {
"args": [  ],
"method": "spawn_debris"
}, {
"args": [  ],
"method": "spawn_debris"
}, {
"args": [  ],
"method": "spawn_debris"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Cracks:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PackedFloat32Array( 0, 0.7 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="CircleShape2D" id=8]
resource_local_to_scene = true
radius = 15.0

[sub_resource type="CanvasItemMaterial" id=11]

[node name="Hole" type="Node2D" groups=["hole"]]
z_index = -500
z_as_relative = false
script = ExtResource( 1 )
swarm_object = ExtResource( 3 )

[node name="Hole" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2( 1e-05, 1e-05 )
z_index = -2
texture = ExtResource( 2 )
hframes = 2
vframes = 2
frame = 3

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/destroy_terrain = SubResource( 9 )
anims/fade = SubResource( 10 )
anims/grow = SubResource( 7 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
z_index = 4096
shape = SubResource( 8 )

[node name="mask" type="Sprite2D" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
max_distance = 500.0
attenuation = 2.0
bus = "SFX"

[node name="ZIndexer" parent="." instance=ExtResource( 6 )]
z_index = -500

[node name="Cracks" type="Sprite2D" parent="."]
material = SubResource( 11 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 7 )
hframes = 4

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
